tests/snapshot/error/source_locations/destructure/array/iterator_close_empty.js
var iterable = {
  [Symbol.iterator]() {
    return {
      next() {
        return { value: 1, done: false };
      },
      get return() {
        throw new Error();
      }
    }
  }
};

var [] = iterable;